# touhou-project-scarlet

./: .gitignore  Cargo.toml  README.md  justfile
.claude/: settings.json
.claude/commands/: impl.md  pr.md  understand-deep.md  understand.md
.github/: PULL_REQUEST_TEMPLATE.md
app/assets/: Cargo.toml
app/audio/: Cargo.toml
app/audio/src/: lib.rs
app/core/: Cargo.toml
app/core/src/: constants.rs  debug.rs  events.rs  game_set.rs  lib.rs  states.rs
app/core/src/components/: boss.rs  bullet.rs  effects.rs  enemy.rs  item.rs  mod.rs  player.rs
app/core/src/config/: enemy_bullet.rs  fodder_enemy.rs  game_rules.rs  mod.rs  player.rs  player_bullet.rs
app/core/src/resources/: bomb.rs  difficulty.rs  fragment.rs  game_data.rs  mod.rs  spawner.rs  stage.rs
app/core/src/shaders/: bomb_marisa.rs  bomb_reimu.rs  bullet_glow.rs  bullet_trail.rs  graze_field.rs  hit_flash.rs  mod.rs  plugin.rs  spell_card_bg.rs
app/core/src/stages/: mod.rs  stage1.rs
app/core/src/systems/: bomb.rs  bullet.rs  cleanup.rs  collision.rs  effects.rs  item.rs  loading.rs  mod.rs  player.rs  reset.rs  score.rs  stage.rs  stage_clear.rs
app/core/src/systems/boss/: mod.rs  movement.rs  phase.rs
app/core/src/systems/boss/bosses/: mod.rs  rumia.rs
app/core/src/systems/danmaku/: emitter.rs  mod.rs  patterns.rs
app/core/src/systems/enemy/: cull.rs  mod.rs  movement.rs  spawner.rs
app/touhou-project-scarlet/: Cargo.toml
app/touhou-project-scarlet/assets/config/: game_rules.ron  player.ron
app/touhou-project-scarlet/assets/config/bullets/: enemy.ron  player.ron
app/touhou-project-scarlet/assets/config/enemies/: fodder.ron
app/touhou-project-scarlet/assets/shaders/: bomb_marisa.wgsl  bomb_reimu.wgsl  bullet_glow.wgsl  bullet_trail.wgsl  graze_field.wgsl  hit_flash.wgsl  spell_card_bg.wgsl
app/touhou-project-scarlet/assets/shaders/common/: math.wgsl  noise.wgsl
app/touhou-project-scarlet/src/: main.rs
app/ui/: Cargo.toml
app/ui/src/: camera.rs  lib.rs
docs/: 02_architecture.md  03_danmaku_systems.md  04_ui_ux.md  05_audio.md  06_implementation_plan.md  07_project_structure.md  08_crate_architecture.md  09_quick_reference.md  10_shaders_wgsl.md  specification.md
docs/roadmap/: README.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  (+9 more)
(+1 files in other folders)
