[package]
name = "scarlet-audio"
version.workspace = true 
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
scarlet-core = { path = "../core" }
